# leshcom

./: CMakeCache.txt  README.md  build.ninja  calculator.cpp  calculator.h  cmake_install.cmake  patch1.patch  patch2.patch  rules.ninja
src/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  Database.cpp  Database.h  Employee.cpp  Employee.h  Makefile  Position.cpp  Position.h  UserInterface.cpp  build.ninja  cmake_install.cmake  linkilstwork.c  mathwork.c  rules.ninja  stringwork.c
